# local-mc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  comparison-with-existing-mc.md  migration.md  oem-options.md  v0.1-scaffold.md
examples/: projects.example.yaml
lmc/: __init__.py  artifacts.py  cli.py  config.py  projects.py  server.py  sessions.py  store.py
scripts/: install.ps1  install.sh
tasks/: lessons.md  objectives.yaml  planning.md  queue.yaml
tests/: test_artifacts.py  test_projects.py  test_sessions.py  test_smoke.py  test_store.py
web/: app.js  index.html  style.css
